Refactor enums, fix linting issues, and update imports across projects